feat: Modular Structure for Naive Bayes Classifier

--- a/Assignment-2/training.ipynb
+++ b/Assignment-2/training.ipynb
@@ -5,14 +5,18 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T18:22:43.953018Z",
-     "start_time": "2021-10-11T18:22:43.799728Z"
+     "end_time": "2021-10-12T18:57:06.567266Z",
+     "start_time": "2021-10-12T18:56:57.448688Z"
     }
    },
    "outputs": [],
    "source": [
     "import scipy.sparse as sp\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "import json\n",
+    "import re"
    ]
   },
   {
@@ -20,8 +24,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T18:22:44.614149Z",
-     "start_time": "2021-10-11T18:22:44.567173Z"
+     "end_time": "2021-10-12T18:57:06.987443Z",
+     "start_time": "2021-10-12T18:57:06.571485Z"
     }
    },
    "outputs": [],
@@ -34,8 +38,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T18:22:45.240539Z",
-     "start_time": "2021-10-11T18:22:45.213407Z"
+     "end_time": "2021-10-12T18:57:07.008766Z",
+     "start_time": "2021-10-12T18:57:06.993271Z"
     }
    },
    "outputs": [
@@ -60,33 +64,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T18:22:46.345019Z",
-     "start_time": "2021-10-11T18:22:46.341219Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(19579, 24951)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "featureMatrix.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-11T18:22:47.629753Z",
-     "start_time": "2021-10-11T18:22:47.320634Z"
+     "end_time": "2021-10-12T18:57:07.723064Z",
+     "start_time": "2021-10-12T18:57:07.010863Z"
     }
    },
    "outputs": [
@@ -98,7 +77,7 @@
        "        24168, 24416, 24641]),)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,17 +88,260 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T18:22:49.612739Z",
-     "start_time": "2021-10-11T18:22:49.610108Z"
+     "end_time": "2021-10-12T17:02:12.155866Z",
+     "start_time": "2021-10-12T17:02:11.908703Z"
+    }
+   },
+   "source": [
+    "#### The code above was a test to check if everything seems fine after loading the featureMatrix from disk. Looks good to me\n",
+    "\n",
+    "### TRAINING: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T18:57:08.353621Z",
+     "start_time": "2021-10-12T18:57:07.724956Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Looks good to me"
+    "train_df = pd.read_csv(\"dataset/train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T18:57:08.357553Z",
+     "start_time": "2021-10-12T18:57:08.355386Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "num_examples, num_vocab_words = featureMatrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T18:57:08.782532Z",
+     "start_time": "2021-10-12T18:57:08.359348Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['EAP', 'HPL', 'MWS']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_labels = list(train_df[\"author\"].unique())\n",
+    "class_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T18:57:09.064345Z",
+     "start_time": "2021-10-12T18:57:08.789499Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EAP': 0, 'HPL': 1, 'MWS': 2}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labelMap = {}\n",
+    "for idx, label in enumerate(class_labels):\n",
+    "    labelMap[label] = idx\n",
+    "labelMap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T18:57:09.298387Z",
+     "start_time": "2021-10-12T18:57:09.070413Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "all_indices = [i for i in range(num_examples)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T18:57:09.785189Z",
+     "start_time": "2021-10-12T18:57:09.773010Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "random.shuffle(all_indices)\n",
+    "num_training_examples = int(num_examples * 0.7)\n",
+    "num_test_examples = num_examples - num_training_examples\n",
+    "train_indices, test_indices = all_indices[:num_training_examples], all_indices[num_training_examples:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T18:57:10.652195Z",
+     "start_time": "2021-10-12T18:57:10.610847Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"word_index.json\", \"r\") as file:\n",
+    "    wordIndex = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T19:02:04.955916Z",
+     "start_time": "2021-10-12T19:02:04.932394Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class NaiveBayesClassifier():\n",
+    "    def __init__(\n",
+    "        self, \n",
+    "        num_training_examples, \n",
+    "        num_test_examples, \n",
+    "        train_indices,\n",
+    "        test_indices, \n",
+    "        train_df, \n",
+    "        featureMatrix\n",
+    "    ):\n",
+    "        self.num_train_examples = num_training_examples\n",
+    "        self.num_test_examples = num_test_examples\n",
+    "        self.train_indices = train_indices\n",
+    "        self.test_indices = test_indices\n",
+    "        self.dataframe = train_df\n",
+    "        self.featureMatrix = featureMatrix\n",
+    "\n",
+    "    def train(self, ):\n",
+    "        self.trainFeatureMatrix = sp.csr_matrix(np.array(self.featureMatrix.toarray()[train_indices]))\n",
+    "        \n",
+    "\n",
+    "    def evaluateExample(self):\n",
+    "        \"\"\"\n",
+    "        Parameters\n",
+    "        ------------\n",
+    "        featureVector : (X1,X2,X3,.....Xn) [n = num_vocab_words]\n",
+    "\n",
+    "\n",
+    "        Returns\n",
+    "        ------------\n",
+    "        The predicted label_id of the example\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    def test(self, ):\n",
+    "        \"\"\"\n",
+    "        Predict Accuracy of All test samples\n",
+    "        \"\"\"\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T19:02:05.094328Z",
+     "start_time": "2021-10-12T19:02:05.088053Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "NBClassifier = NaiveBayesClassifier(\n",
+    "    num_training_examples, \n",
+    "    num_test_examples, \n",
+    "    train_indices, \n",
+    "    test_indices, \n",
+    "    train_df, \n",
+    "    featureMatrix\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T19:02:09.889306Z",
+     "start_time": "2021-10-12T19:02:05.215169Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "NBClassifier.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T19:02:59.209263Z",
+     "start_time": "2021-10-12T19:02:59.199429Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<13705x24951 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 175127 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NBClassifier.trainFeatureMatrix"
    ]
   },
   {
