feat: Added train, evaluteExample and test method in NBClassifier

--- a/Assignment-2/training.ipynb
+++ b/Assignment-2/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:06.567266Z",
@@ -16,12 +16,13 @@
     "import pandas as pd\n",
     "import random\n",
     "import json\n",
-    "import re"
+    "import re\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:06.987443Z",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:07.008766Z",
@@ -50,7 +51,7 @@
        "\twith 250731 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:07.723064Z",
@@ -77,7 +78,7 @@
        "        24168, 24416, 24641]),)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,21 +104,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:08.353621Z",
      "start_time": "2021-10-12T18:57:07.724956Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id26305</td>\n",
+       "      <td>This process, however, afforded me no means of...</td>\n",
+       "      <td>EAP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>id17569</td>\n",
+       "      <td>It never once occurred to me that the fumbling...</td>\n",
+       "      <td>HPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>id11008</td>\n",
+       "      <td>In his left hand was a gold snuff box, from wh...</td>\n",
+       "      <td>EAP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>id27763</td>\n",
+       "      <td>How lovely is spring As we looked from Windsor...</td>\n",
+       "      <td>MWS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>id12958</td>\n",
+       "      <td>Finding nothing else, not even gold, the Super...</td>\n",
+       "      <td>HPL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                                               text author\n",
+       "0  id26305  This process, however, afforded me no means of...    EAP\n",
+       "1  id17569  It never once occurred to me that the fumbling...    HPL\n",
+       "2  id11008  In his left hand was a gold snuff box, from wh...    EAP\n",
+       "3  id27763  How lovely is spring As we looked from Windsor...    MWS\n",
+       "4  id12958  Finding nothing else, not even gold, the Super...    HPL"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "train_df = pd.read_csv(\"dataset/train.csv\")"
+    "train_df = pd.read_csv(\"dataset/train.csv\")\n",
+    "train_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:08.357553Z",
@@ -131,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:08.782532Z",
@@ -145,7 +222,7 @@
        "['EAP', 'HPL', 'MWS']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:09.064345Z",
@@ -171,7 +248,7 @@
        "{'EAP': 0, 'HPL': 1, 'MWS': 2}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 125,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:09.298387Z",
@@ -194,12 +271,18 @@
    },
    "outputs": [],
    "source": [
-    "all_indices = [i for i in range(num_examples)]"
+    "def train_test_split_indices(num_examples):\n",
+    "    all_indices = [i for i in range(num_examples)]\n",
+    "    random.shuffle(all_indices)\n",
+    "    num_training_examples = int(num_examples * 0.9)\n",
+    "    num_test_examples = num_examples - num_training_examples\n",
+    "    train_indices, test_indices = all_indices[:num_training_examples], all_indices[num_training_examples:]\n",
+    "    return train_indices, test_indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:09.785189Z",
@@ -208,15 +291,12 @@
    },
    "outputs": [],
    "source": [
-    "random.shuffle(all_indices)\n",
-    "num_training_examples = int(num_examples * 0.7)\n",
-    "num_test_examples = num_examples - num_training_examples\n",
-    "train_indices, test_indices = all_indices[:num_training_examples], all_indices[num_training_examples:]"
+    "stopwords = [\"i\", \"me\", \"my\", \"myself\", \"we\", \"our\", \"ours\", \"ourselves\", \"you\", \"your\", \"yours\", \"yourself\", \"yourselves\", \"he\", \"him\", \"his\", \"himself\", \"she\", \"her\", \"hers\", \"herself\", \"it\", \"its\", \"itself\", \"they\", \"them\", \"their\", \"theirs\", \"themselves\", \"what\", \"which\", \"who\", \"whom\", \"this\", \"that\", \"these\", \"those\", \"am\", \"is\", \"are\", \"was\", \"were\", \"be\", \"been\", \"being\", \"have\", \"has\", \"had\", \"having\", \"do\", \"does\", \"did\", \"doing\", \"a\", \"an\", \"the\", \"and\", \"but\", \"if\", \"or\", \"because\", \"as\", \"until\", \"while\", \"of\", \"at\", \"by\", \"for\", \"with\", \"about\", \"against\", \"between\", \"into\", \"through\", \"during\", \"before\", \"after\", \"above\", \"below\", \"to\", \"from\", \"up\", \"down\", \"in\", \"out\", \"on\", \"off\", \"over\", \"under\", \"again\", \"further\", \"then\", \"once\", \"here\", \"there\", \"when\", \"where\", \"why\", \"how\", \"all\", \"any\", \"both\", \"each\", \"few\", \"more\", \"most\", \"other\", \"some\", \"such\", \"no\", \"nor\", \"not\", \"only\", \"own\", \"same\", \"so\", \"than\", \"too\", \"very\", \"s\", \"t\", \"can\", \"will\", \"just\", \"don\", \"should\", \"now\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T18:57:10.652195Z",
@@ -231,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 121,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T19:02:04.955916Z",
@@ -248,7 +328,8 @@
     "        train_indices,\n",
     "        test_indices, \n",
     "        train_df, \n",
-    "        featureMatrix\n",
+    "        featureMatrix,\n",
+    "        labelMap\n",
     "    ):\n",
     "        self.num_train_examples = num_training_examples\n",
     "        self.num_test_examples = num_test_examples\n",
@@ -256,12 +337,31 @@
     "        self.test_indices = test_indices\n",
     "        self.dataframe = train_df\n",
     "        self.featureMatrix = featureMatrix\n",
+    "        self.labelMap = labelMap\n",
+    "        self.trainFeatureMatrix = featureMatrix[train_indices]\n",
+    "        self.class_distribution = np.zeros((len(self.labelMap.items())))\n",
     "\n",
-    "    def train(self, ):\n",
-    "        self.trainFeatureMatrix = sp.csr_matrix(np.array(self.featureMatrix.toarray()[train_indices]))\n",
-    "        \n",
-    "\n",
-    "    def evaluateExample(self):\n",
+    "    def train(self, labelMap):\n",
+    "        for i in train_indices:\n",
+    "            self.class_distribution[labelMap[self.dataframe[\"author\"][i]]] += 1\n",
+    "            \n",
+    "        self.likelihood_probabilities = np.zeros((len(class_labels), self.featureMatrix.shape[1], 2))\n",
+    "        for i in tqdm(self.train_indices):\n",
+    "            class_label = self.labelMap[self.dataframe[\"author\"][i]]\n",
+    "            text = self.dataframe[\"text\"][i]\n",
+    "            words = re.findall(\"[a-z0-9]+\", text.lower())\n",
+    "            for word in words:\n",
+    "                if word in stopwords:\n",
+    "                    continue\n",
+    "                self.likelihood_probabilities[class_label,wordIndex[word]][1] += 1\n",
+    "        for i in range(self.likelihood_probabilities.shape[0]):\n",
+    "            for j in range(self.likelihood_probabilities.shape[1]):\n",
+    "                self.likelihood_probabilities[i,j,0] = self.class_distribution[i] - self.likelihood_probabilities[i,j,1]\n",
+    "                self.likelihood_probabilities[i,j,0] /= self.class_distribution[i]\n",
+    "                self.likelihood_probabilities[i,j,1] /= self.class_distribution[i]\n",
+    "        for i in range(len(self.class_distribution)):\n",
+    "            self.class_distribution[i] /= self.num_train_examples\n",
+    "    def evaluateExample(self, feature_vector):\n",
     "        \"\"\"\n",
     "        Parameters\n",
     "        ------------\n",
@@ -273,18 +373,46 @@
     "        The predicted label_id of the example\n",
     "        \n",
     "        \"\"\"\n",
-    "        pass\n",
+    "        feature_vector = feature_vector.toarray()\n",
+    "        best_class, best_probability = None, 0\n",
+    "        for class_name, class_num in self.labelMap.items():\n",
+    "            cur_probability = self.class_distribution[class_num]\n",
+    "            for j in range(feature_vector.shape[1]):\n",
+    "                cur_probability *= self.likelihood_probabilities[class_num,j,feature_vector[0][j]]\n",
+    "            if best_class is None:\n",
+    "                best_class  = class_name\n",
+    "                best_probability = cur_probability\n",
+    "            elif cur_probability > best_probability:\n",
+    "                best_class  = class_name\n",
+    "                best_probability = cur_probability\n",
+    "        return best_class\n",
     "\n",
-    "    def test(self, ):\n",
+    "    def test(self):\n",
     "        \"\"\"\n",
     "        Predict Accuracy of All test samples\n",
     "        \"\"\"\n",
-    "        pass"
+    "        correctly_predicted = 0\n",
+    "        total_predicted = len(self.test_indices)\n",
+    "        for j in tqdm(range(len(self.test_indices))):\n",
+    "            if(self.evaluateExample(self.featureMatrix[self.test_indices[j]]) == self.dataframe[\"author\"][self.test_indices[j]]):\n",
+    "                correctly_predicted += 1\n",
+    "        correctly_predicted /= total_predicted\n",
+    "        self.answer = correctly_predicted\n",
+    "        return correctly_predicted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_indices, test_indices = train_test_split_indices(num_examples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T19:02:05.094328Z",
@@ -299,13 +427,14 @@
     "    train_indices, \n",
     "    test_indices, \n",
     "    train_df, \n",
-    "    featureMatrix\n",
+    "    featureMatrix,\n",
+    "    labelMap\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 128,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T19:02:09.889306Z",
@@ -313,14 +442,53 @@
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 17621/17621 [00:01<00:00, 15367.36it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "NBClassifier.train()"
+    "NBClassifier.train(labelMap)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1958/1958 [01:00<00:00, 32.45it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6235955056179775\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(NBClassifier.test())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-12T19:02:59.209263Z",
@@ -332,23 +500,61 @@
      "data": {
       "text/plain": [
        "<13705x24951 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 175127 stored elements in Compressed Sparse Row format>"
+       "\twith 176355 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "NBClassifier.trainFeatureMatrix"
+    "featureMatrix[train_indices]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1x24951 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 20 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "featureMatrix[test_indices[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EAP MWS\n",
+      "HPL HPL\n",
+      "EAP EAP\n",
+      "EAP EAP\n",
+      "EAP EAP\n",
+      "EAP EAP\n",
+      "EAP EAP\n",
+      "EAP MWS\n",
+      "HPL HPL\n",
+      "HPL EAP\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
@@ -368,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
