feat: Apply Laplace Correction and Vectorize Code

--- a/Assignment-2/featureMatrix_generation.ipynb
+++ b/Assignment-2/featureMatrix_generation.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:57:45.278854Z",
-     "start_time": "2021-10-12T17:57:44.933499Z"
+     "end_time": "2021-10-18T16:31:13.105904Z",
+     "start_time": "2021-10-18T16:31:12.060017Z"
     }
    },
    "outputs": [],
@@ -25,8 +25,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:57:45.673968Z",
-     "start_time": "2021-10-12T17:57:45.602530Z"
+     "end_time": "2021-10-18T16:31:13.172195Z",
+     "start_time": "2021-10-18T16:31:13.107712Z"
     }
    },
    "outputs": [
@@ -160,8 +160,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:57:46.090078Z",
-     "start_time": "2021-10-12T17:57:46.039686Z"
+     "end_time": "2021-10-18T16:31:13.274765Z",
+     "start_time": "2021-10-18T16:31:13.174584Z"
     }
    },
    "outputs": [
@@ -242,8 +242,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:57:46.818453Z",
-     "start_time": "2021-10-12T17:57:46.549020Z"
+     "end_time": "2021-10-18T16:31:13.632692Z",
+     "start_time": "2021-10-18T16:31:13.276437Z"
     }
    },
    "outputs": [],
@@ -262,8 +262,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:57:47.580175Z",
-     "start_time": "2021-10-12T17:57:47.576002Z"
+     "end_time": "2021-10-18T16:31:13.644200Z",
+     "start_time": "2021-10-18T16:31:13.639261Z"
     }
    },
    "outputs": [
@@ -284,11 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:57:57.986555Z",
-     "start_time": "2021-10-12T17:57:57.963229Z"
+     "end_time": "2021-10-18T16:31:13.712297Z",
+     "start_time": "2021-10-18T16:31:13.645942Z"
     }
    },
    "outputs": [],
@@ -307,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:00.195000Z",
-     "start_time": "2021-10-12T17:58:00.190908Z"
+     "end_time": "2021-10-18T16:31:13.780706Z",
+     "start_time": "2021-10-18T16:31:13.713596Z"
     }
    },
    "outputs": [
@@ -321,7 +321,7 @@
        "24951"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,11 +332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:02.425201Z",
-     "start_time": "2021-10-12T17:58:02.410351Z"
+     "end_time": "2021-10-18T16:31:13.866460Z",
+     "start_time": "2021-10-18T16:31:13.782752Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
        " 'abased']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,11 +367,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:05.018701Z",
-     "start_time": "2021-10-12T17:58:05.007566Z"
+     "end_time": "2021-10-18T16:31:13.946535Z",
+     "start_time": "2021-10-18T16:31:13.869518Z"
     }
    },
    "outputs": [],
@@ -383,11 +383,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:05.555071Z",
-     "start_time": "2021-10-12T17:58:05.510960Z"
+     "end_time": "2021-10-18T16:31:14.096841Z",
+     "start_time": "2021-10-18T16:31:13.947976Z"
     }
    },
    "outputs": [],
@@ -398,11 +398,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:21.758065Z",
-     "start_time": "2021-10-12T17:58:21.736219Z"
+     "end_time": "2021-10-18T16:31:14.214170Z",
+     "start_time": "2021-10-18T16:31:14.098273Z"
     }
    },
    "outputs": [
@@ -418,7 +418,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,11 +433,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:23.660714Z",
-     "start_time": "2021-10-12T17:58:22.806431Z"
+     "end_time": "2021-10-18T16:31:15.248841Z",
+     "start_time": "2021-10-18T16:31:14.217004Z"
     }
    },
    "outputs": [],
@@ -450,7 +450,7 @@
     "\n",
     "for i in range(train.shape[0]):\n",
     "    text = train[\"text\"][i]\n",
-    "    words = re.findall(\"[a-z0-9]+\", text.lower())\n",
+    "    words = set(re.findall(\"[a-z0-9]+\", text.lower()))\n",
     "    for word in words:\n",
     "        if word in stopwords:\n",
     "            continue\n",
@@ -459,11 +459,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:25.531347Z",
-     "start_time": "2021-10-12T17:58:23.662480Z"
+     "end_time": "2021-10-18T16:31:17.002012Z",
+     "start_time": "2021-10-18T16:31:15.250064Z"
     }
    },
    "outputs": [
@@ -471,7 +471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 24951/24951 [00:01<00:00, 14503.82it/s]\n"
+      "100%|██████████| 24951/24951 [00:01<00:00, 14303.36it/s]\n"
      ]
     }
    ],
@@ -482,11 +482,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:25.587570Z",
-     "start_time": "2021-10-12T17:58:25.533022Z"
+     "end_time": "2021-10-18T16:31:17.029229Z",
+     "start_time": "2021-10-18T16:31:17.003642Z"
     }
    },
    "outputs": [],
@@ -499,11 +499,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:29.408827Z",
-     "start_time": "2021-10-12T17:58:29.038448Z"
+     "end_time": "2021-10-18T16:31:17.477319Z",
+     "start_time": "2021-10-18T16:31:17.030824Z"
     }
    },
    "outputs": [
@@ -519,7 +519,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,11 +530,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:30.766778Z",
-     "start_time": "2021-10-12T17:58:30.371965Z"
+     "end_time": "2021-10-18T16:31:17.862750Z",
+     "start_time": "2021-10-18T16:31:17.478460Z"
     }
    },
    "outputs": [
@@ -544,7 +544,7 @@
        "24951"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,11 +555,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:43.185687Z",
-     "start_time": "2021-10-12T17:58:43.180024Z"
+     "end_time": "2021-10-18T16:31:17.870463Z",
+     "start_time": "2021-10-18T16:31:17.863873Z"
     }
    },
    "outputs": [
@@ -589,7 +589,7 @@
        " 24641]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,11 +608,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:46.612187Z",
-     "start_time": "2021-10-12T17:58:46.286836Z"
+     "end_time": "2021-10-18T16:31:18.326779Z",
+     "start_time": "2021-10-18T16:31:17.872656Z"
     }
    },
    "outputs": [
@@ -624,7 +624,7 @@
        "         True,  True,  True]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,11 +636,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:47.439299Z",
-     "start_time": "2021-10-12T17:58:47.429146Z"
+     "end_time": "2021-10-18T16:31:18.330774Z",
+     "start_time": "2021-10-18T16:31:18.328055Z"
     }
    },
    "outputs": [
@@ -650,7 +650,7 @@
        "(19579, 24951)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,11 +661,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-12T17:58:48.261312Z",
-     "start_time": "2021-10-12T17:58:48.083064Z"
+     "end_time": "2021-10-18T16:31:18.567628Z",
+     "start_time": "2021-10-18T16:31:18.332058Z"
     }
    },
    "outputs": [],
