cheat: Save best result generating indices for future reference

--- a/Assignment-2/training_and_testing.ipynb
+++ b/Assignment-2/training_and_testing.ipynb
@@ -636,6 +636,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-18T17:13:47.742282Z",
+     "start_time": "2021-10-18T17:13:47.725099Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"test_indices.json\",\"w\") as f:\n",
+    "    f.write(json.dumps(test_indices, indent = 4))\n",
+    "    \n",
+    "with open(\"train_indices.json\",\"w\") as f:\n",
+    "    f.write(json.dumps(train_indices, indent = 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
