--- a/Assignment-2/training_and_testing.ipynb
+++ b/Assignment-2/training_and_testing.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:07.364427Z",
-     "start_time": "2021-10-18T16:44:07.079427Z"
+     "end_time": "2021-10-19T07:33:55.302705Z",
+     "start_time": "2021-10-19T07:33:54.223862Z"
     }
    },
    "outputs": [],
@@ -25,8 +25,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:08.122837Z",
-     "start_time": "2021-10-18T16:44:07.365977Z"
+     "end_time": "2021-10-19T07:33:55.450034Z",
+     "start_time": "2021-10-19T07:33:55.305142Z"
     }
    },
    "outputs": [],
@@ -39,8 +39,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:08.149602Z",
-     "start_time": "2021-10-18T16:44:08.125738Z"
+     "end_time": "2021-10-19T07:33:55.483293Z",
+     "start_time": "2021-10-19T07:33:55.459494Z"
     }
    },
    "outputs": [
@@ -65,8 +65,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:08.561129Z",
-     "start_time": "2021-10-18T16:44:08.151287Z"
+     "end_time": "2021-10-19T07:33:55.959522Z",
+     "start_time": "2021-10-19T07:33:55.485731Z"
     }
    },
    "outputs": [
@@ -107,8 +107,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:08.618941Z",
-     "start_time": "2021-10-18T16:44:08.562834Z"
+     "end_time": "2021-10-19T07:33:56.018779Z",
+     "start_time": "2021-10-19T07:33:55.962003Z"
     }
    },
    "outputs": [
@@ -197,8 +197,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:08.826988Z",
-     "start_time": "2021-10-18T16:44:08.620862Z"
+     "end_time": "2021-10-19T07:33:56.042403Z",
+     "start_time": "2021-10-19T07:33:56.020517Z"
     }
    },
    "outputs": [],
@@ -211,8 +211,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:09.220879Z",
-     "start_time": "2021-10-18T16:44:08.828417Z"
+     "end_time": "2021-10-19T07:33:56.123381Z",
+     "start_time": "2021-10-19T07:33:56.048829Z"
     }
    },
    "outputs": [
@@ -237,8 +237,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:09.279871Z",
-     "start_time": "2021-10-18T16:44:09.231472Z"
+     "end_time": "2021-10-19T07:33:56.188467Z",
+     "start_time": "2021-10-19T07:33:56.125746Z"
     }
    },
    "outputs": [
@@ -265,8 +265,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:09.347109Z",
-     "start_time": "2021-10-18T16:44:09.281852Z"
+     "end_time": "2021-10-19T07:33:56.255746Z",
+     "start_time": "2021-10-19T07:33:56.190080Z"
     }
    },
    "outputs": [],
@@ -285,8 +285,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:09.417984Z",
-     "start_time": "2021-10-18T16:44:09.348953Z"
+     "end_time": "2021-10-19T07:33:56.323114Z",
+     "start_time": "2021-10-19T07:33:56.257586Z"
     }
    },
    "outputs": [],
@@ -299,8 +299,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:09.509395Z",
-     "start_time": "2021-10-18T16:44:09.424268Z"
+     "end_time": "2021-10-19T07:33:56.442101Z",
+     "start_time": "2021-10-19T07:33:56.324745Z"
     }
    },
    "outputs": [],
@@ -314,8 +314,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:44:09.604656Z",
-     "start_time": "2021-10-18T16:44:09.511301Z"
+     "end_time": "2021-10-19T07:33:56.548130Z",
+     "start_time": "2021-10-19T07:33:56.444560Z"
     }
    },
    "outputs": [],
@@ -455,25 +455,28 @@
     "        Predict Accuracy of All test samples\n",
     "        \"\"\"\n",
     "        correctly_predicted = 0\n",
+    "        results = []\n",
     "        \n",
     "        for j in tqdm(range(self.num_test_examples)):\n",
-    "            if(self.evaluate_example(self.featureMatrix[self.test_indices[j]]) == self.dataframe[\"author\"][self.test_indices[j]]):\n",
+    "            predicted = self.evaluate_example(self.featureMatrix[self.test_indices[j]])\n",
+    "            actual = self.dataframe[\"author\"][self.test_indices[j]]\n",
+    "            if predicted == actual:\n",
     "                correctly_predicted += 1\n",
+    "            results.append([actual, predicted])\n",
     "        \n",
     "        correctly_predicted /= self.num_test_examples\n",
     "        \n",
-    "        self.accuracy = correctly_predicted * 100\n",
-    "        \n",
-    "        return self.accuracy"
+    "        self.accuracy = correctly_predicted\n",
+    "        self.predictions = results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:51:40.392730Z",
-     "start_time": "2021-10-18T16:51:40.380043Z"
+     "end_time": "2021-10-19T07:33:56.992229Z",
+     "start_time": "2021-10-19T07:33:56.549998Z"
     }
    },
    "outputs": [],
@@ -483,11 +486,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:51:40.583518Z",
-     "start_time": "2021-10-18T16:51:40.569316Z"
+     "end_time": "2021-10-19T07:33:57.063146Z",
+     "start_time": "2021-10-19T07:33:56.995111Z"
     }
    },
    "outputs": [],
@@ -503,11 +506,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:51:41.633039Z",
-     "start_time": "2021-10-18T16:51:40.731502Z"
+     "end_time": "2021-10-19T07:33:58.150181Z",
+     "start_time": "2021-10-19T07:33:57.068742Z"
     },
     "scrolled": false
    },
@@ -516,7 +519,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13705/13705 [00:00<00:00, 18586.13it/s]\n"
+      "100%|██████████| 13705/13705 [00:00<00:00, 17311.86it/s]\n"
      ]
     }
    ],
@@ -526,11 +529,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:52:22.264809Z",
-     "start_time": "2021-10-18T16:51:41.635008Z"
+     "end_time": "2021-10-19T07:34:42.818754Z",
+     "start_time": "2021-10-19T07:33:58.151539Z"
     },
     "scrolled": true
    },
@@ -539,18 +542,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5874/5874 [00:40<00:00, 144.59it/s]\n"
+      "100%|██████████| 5874/5874 [00:44<00:00, 131.52it/s]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "58.324821246169556"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -558,12 +551,168 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accuracy, Precision, Sensitivity(Recall) , Specificity,  F-Score"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:52:22.268610Z",
-     "start_time": "2021-10-18T16:52:22.266870Z"
+     "end_time": "2021-10-19T07:34:42.831772Z",
+     "start_time": "2021-10-19T07:34:42.821562Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from statistics import mean\n",
+    "\n",
+    "def generate_statistics(predictions, class_labels, labelMap):\n",
+    "    \"\"\"\n",
+    "    Parameter\n",
+    "    ------------\n",
+    "    predictions : A list of list of the format [actual,predicted]\n",
+    "    class_labels : List of possible outcomes\n",
+    "    labelMap : Mapping of Outcome to integer\n",
+    "    \n",
+    "    Returns \n",
+    "    ------------\n",
+    "    precision, f-score, sensitivity, specificity\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    num_classes = len(class_labels)\n",
+    "    \n",
+    "    true_positive, true_negative, false_positive, false_negative = [0] * num_classes,  [0] * num_classes,  [0] * num_classes,  [0] * num_classes\n",
+    "#     print(true_positive, true_negative, false_positive, false_negative)\n",
+    "    \n",
+    "    for [actual_label, predicted_label] in predictions:\n",
+    "        \n",
+    "        actual_label_id = labelMap[actual_label]\n",
+    "        predicted_label_id = labelMap[predicted_label]\n",
+    "        \n",
+    "        if actual_label == predicted_label:\n",
+    "            true_positive[actual_label_id] += 1\n",
+    "            \n",
+    "            for label_id in range(num_classes):\n",
+    "                if actual_label_id != label_id:\n",
+    "                    true_negative[label_id] += 1\n",
+    "        else: \n",
+    "            false_positive[predicted_label_id] += 1\n",
+    "            false_negative[actual_label_id] += 1\n",
+    "            \n",
+    "    \n",
+    "    micro_precision = sum(true_positive) / ( sum(true_positive) + sum(false_positive) )\n",
+    "    micro_sensitivity = sum(true_positive) / ( sum(true_positive) + sum(false_negative) )\n",
+    "    micro_specificity = sum(true_negative) / ( sum(true_negative) + sum(false_positive) )\n",
+    "    micro_f_score = (2 * micro_precision * micro_sensitivity) / (micro_precision + micro_sensitivity)\n",
+    "    \n",
+    "    \n",
+    "    classwise_precision = [ true_positive[i] / (true_positive[i] + false_positive[i])  for i in range(num_classes)] \n",
+    "    classwise_sensitivity = [ true_positive[i] / (true_positive[i] + false_negative[i])  for i in range(num_classes)]\n",
+    "    classwise_specificity = [ true_negative[i] / (true_negative[i] + false_positive[i])  for i in range(num_classes)]\n",
+    "    \n",
+    "    macro_precision = mean(classwise_precision)\n",
+    "    macro_sensitivity = mean(classwise_sensitivity)\n",
+    "    macro_specificity = mean(classwise_specificity)\n",
+    "    macro_f_score = mean([(2*classwise_precision[i] * classwise_sensitivity[i]) / (classwise_precision[i] + classwise_sensitivity[i]) for i in range(num_classes)])\n",
+    "    \n",
+    "    #     print(true_positive, true_negative, false_positive, false_negative)\n",
+    "    \n",
+    "    print(\"MACRO STATS\")\n",
+    "    print(f\"Micro Precision = {micro_precision}\")\n",
+    "    print(f\"Micro Sensitivity(Recall) = {micro_sensitivity}\")    \n",
+    "    print(f\"Micro Specificity = {micro_specificity}\")    \n",
+    "    print(f\"Micro F-Score = {micro_f_score}\")    \n",
+    "    \n",
+    "    \n",
+    "    print(\"\\n****************\\n\")\n",
+    "    print(\"MACRO STATS\")\n",
+    "    print(f\"Macro Precision = {macro_precision}\")\n",
+    "    print(f\"Macro Sensitivity(Recall) = {macro_sensitivity}\")    \n",
+    "    print(f\"Macro Specificity = {macro_specificity}\")    \n",
+    "    print(f\"Macro F-Score = {macro_f_score}\")    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-19T07:34:43.000469Z",
+     "start_time": "2021-10-19T07:34:42.834687Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5812053115423902"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NBClassifier.accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-19T07:34:43.074417Z",
+     "start_time": "2021-10-19T07:34:43.006423Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MACRO STATS\n",
+      "Micro Precision = 0.5812053115423902\n",
+      "Micro Sensitivity(Recall) = 0.5812053115423902\n",
+      "Micro Specificity = 0.7351421188630491\n",
+      "Micro F-Score = 0.5812053115423902\n",
+      "\n",
+      "****************\n",
+      "\n",
+      "MACRO STATS\n",
+      "Macro Precision = 0.7048327579569866\n",
+      "Macro Sensitivity(Recall) = 0.5379154364203398\n",
+      "Macro Specificity = 0.754056533900209\n",
+      "Macro F-Score = 0.5400075878886968\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = NBClassifier.predictions\n",
+    "generate_statistics(predictions, class_labels, labelMap)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observation\n",
+    "- For Micro Case, Precision, Accuracy, Fscore,Recall all should be same and we got it as well "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-19T07:34:43.142296Z",
+     "start_time": "2021-10-19T07:34:43.077138Z"
     }
    },
    "outputs": [],
@@ -582,11 +731,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:52:23.331947Z",
-     "start_time": "2021-10-18T16:52:22.270096Z"
+     "end_time": "2021-10-19T07:34:44.310382Z",
+     "start_time": "2021-10-19T07:34:43.144364Z"
     }
    },
    "outputs": [
@@ -594,7 +743,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13705/13705 [00:00<00:00, 17827.34it/s]\n"
+      "100%|██████████| 13705/13705 [00:00<00:00, 16617.41it/s]\n"
      ]
     }
    ],
@@ -604,11 +753,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T16:53:04.933464Z",
-     "start_time": "2021-10-18T16:52:23.333580Z"
+     "end_time": "2021-10-19T07:35:29.393949Z",
+     "start_time": "2021-10-19T07:34:44.311915Z"
     }
    },
    "outputs": [
@@ -616,18 +765,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5874/5874 [00:41<00:00, 141.22it/s]\n"
+      "100%|██████████| 5874/5874 [00:45<00:00, 130.31it/s]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "78.26012938372489"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -636,20 +775,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-18T17:13:47.742282Z",
-     "start_time": "2021-10-18T17:13:47.725099Z"
+     "end_time": "2021-10-19T07:35:29.398423Z",
+     "start_time": "2021-10-19T07:35:29.395737Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7938372488934287"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NBClassifier.accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-19T07:35:29.567353Z",
+     "start_time": "2021-10-19T07:35:29.399553Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MACRO STATS\n",
+      "Micro Precision = 0.7938372488934287\n",
+      "Micro Sensitivity(Recall) = 0.7938372488934287\n",
+      "Micro Specificity = 0.8850716522729429\n",
+      "Micro F-Score = 0.7938372488934287\n",
+      "\n",
+      "****************\n",
+      "\n",
+      "MACRO STATS\n",
+      "Macro Precision = 0.8382842635101704\n",
+      "Macro Sensitivity(Recall) = 0.7761969346628379\n",
+      "Macro Specificity = 0.8816878677250759\n",
+      "Macro F-Score = 0.7913359660826251\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = NBClassifier.predictions\n",
+    "generate_statistics(predictions, class_labels, labelMap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-19T07:35:29.636284Z",
+     "start_time": "2021-10-19T07:35:29.569302Z"
     }
    },
    "outputs": [],
    "source": [
-    "with open(\"test_indices.json\",\"w\") as f:\n",
-    "    f.write(json.dumps(test_indices, indent = 4))\n",
+    "# # Cheating for future reference\n",
+    "# with open(\"test_indices.json\",\"w\") as f:\n",
+    "#     f.write(json.dumps(test_indices, indent = 4))\n",
     "    \n",
-    "with open(\"train_indices.json\",\"w\") as f:\n",
-    "    f.write(json.dumps(train_indices, indent = 4))"
+    "# with open(\"train_indices.json\",\"w\") as f:\n",
+    "#     f.write(json.dumps(train_indices, indent = 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-19T07:35:29.704317Z",
+     "start_time": "2021-10-19T07:35:29.638145Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# with open(\"test_indices.json\", \"r\") as file:\n",
+    "#     tind = json.load(file)\n",
+    "# tind"
    ]
   },
   {
